<resources>
    <!-- Strings app y MainActivity -->
    <string name="app_name">RONAPP</string>
    <string name="nombre_app">RONAPP</string>
    <string name="subtitulo_app">Tu app de fiestas favorita</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="boton_registro">Registrarse</string>
    <string name="boton_invitado">Iniciar como anonimo</string>

    <!-- Strings fragments GamemodeActivity -->
    <string name="friends_fragment">Friends Fragment</string>
    <string name="gamemode_fragment">Gamemode Fragment</string>
    <string name="shop_fragment">Shop Fragment</string>

    <!-- Strings genericos -->
    <string name="aceptar">Aceptar</string>
    <string name="editar">Editar</string>
    <string name="rechazar">Rechazar</string>
    <string name="atras">Atrás</string>
    <string name="opciones">OPCIONES</string>

    <!-- Strings de errores -->
    <string name="error_elemento_vacio_registro">Usuario o Contraseña vacios, introduzca valores validos</string>
    <string name="error_elemento_vacio_iniciosesion">Ingresa los datos para poder iniciar sesion</string>
    <string name="error_msg">Error</string>
    <string name="error_usr_null">El usuario actual es nulo</string>
    <string name="error_creating_user">"Error al crear el usuario: "</string>
    <string name="error_login_anonymous">Error al acceder</string>
    <string name="empty_numplayer">Ingrese el número de jugadores</string>
    <string name="login_toget_id_msg">Inicia sesion para tener un ID</string>

    <!-- Strings colecciones base de datos -->
    <string name="collection_path_users">users</string>
    <string name="collection_path_session">sessions</string>
    <string name="collection_path_friends_request">friends_request</string>
    <string name="collection_path_friends">friends</string>

    <!-- Strings dialogo modos de juego -->
    <string name="ask_numplayers">Indica el número de jugadores</string>
    <string name="choose_dif_text">Selecciona la dificultad</string>

    <!-- Strings ListFriendsFragment -->
    <string name="id_text">TU ID: </string>
    <string name="show_id">id tuya</string>
    <string name="friends_list_button">Amigos</string>
    <string name="requests_friends_button">Solicitudes de Amistad</string>
    <string name="anonymous">Anonymous</string>
    <string name="user_name">Nombre de Usuario</string>

    <!-- Strings ListPendingFragment -->
    <string name="hint_text_request">Correo electronico de tu amigo</string>
    <string name="send_request">Enviar solicitud</string>
    <string name="defaultTeam">TeamRon</string>
    <string name="defaultUserName">Juanito24</string>
    <string name="profile_title">USER PROFILE</string>
</resources>