<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="16dp"
        android:text="@string/choose_dif_text" />

    <TextView
        android:id="@+id/dificultySelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/opciones"
        android:textColor="@android:color/holo_blue_dark" />
    <TextView
        android:id="@+id/num_jugadores_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="16dp"
        android:text="@string/ask_numplaters" />

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/empty_numplayer" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atras" />

        <Button
            android:id="@+id/acceptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar" />

        </LinearLayout>

</LinearLayout>
