<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/friends_item"
        android:title="@string/friends_fragment"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:icon="@drawable/custom_icon_social" />
    <item
        android:id="@+id/gamemode_item"
        android:title="@string/gamemode_fragment"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:icon="@drawable/custom_icon_home"/>
    <item
        android:id="@+id/room_item"
        android:title="@string/shop_fragment"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:icon="@drawable/custom_icon_multiplayer" />
</menu>
