<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondo_negro"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/layout_principal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/social_media_layout"
        tools:ignore="NotSibling">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="300dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/titulo_app" />


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/subtitulo_app" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo_app" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/color_principal"
            android:ems="10"
            android:hint="@string/correo_electronico"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/color_principal"
            android:ems="10"
            android:hint="@string/contrasena"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/inicio_sesion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/boton_redondo"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/registro"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/boton_redondo"
            android:text="@string/boton_registro"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/anonimo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/boton_invitado"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/social_media_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/facebook"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="130dp"
                android:layout_weight="1"
                android:background="@drawable/boton_redes_sociales_rounded"
                android:backgroundTint="@color/white"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/facebook_logo" />

            <Space
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/google"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="130dp"
                android:layout_weight="1"
                android:background="@drawable/boton_redes_sociales_rounded"
                android:backgroundTint="@color/white"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/google_logo" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>